--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - main  # Changed from master to main
+    - main  
 
 jobs:
   generate:
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 10
     
     permissions:
-      contents: write  # This is the key addition!
+      contents: write 
     
     steps:
       - name: Checkout
